deploy/k8s/billing-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: billing-svc
  namespace: polaris
spec:
  ports:
    - port: 50053
      targetPort: 50053
  selector:
    app: billing-svc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing-svc
  namespace: polaris
spec:
  replicas: 1
  selector:
    matchLabels:
      app: billing-svc
  template:
    metadata:
      labels:
        app: billing-svc
    spec:
      containers:
        - name: billing-svc
          image: you/polaris-billing:local
          imagePullPolicy: Never
          ports:
            - containerPort: 50053
            - containerPort: 9093
              name: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: 9093
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 9093
            initialDelaySeconds: 30
            periodSeconds: 10
