deploy/k8s/gateway-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: polaris
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: api-gateway

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: polaris
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: you/polaris-gateway:local
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
