deploy/k8s/identity-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: identity-svc
  namespace: polaris
spec:
  ports:
    - port: 50051
      targetPort: 50051
  selector:
    app: identity-svc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-svc
  namespace: polaris
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity-svc
  template:
    metadata:
      labels:
        app: identity-svc
    spec:
      containers:
        - name: identity-svc
          image: you/polaris-identity:local
          imagePullPolicy: Never
          ports:
            - containerPort: 50051
            - containerPort: 9091
              name: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: 9091
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 9091
            initialDelaySeconds: 30
            periodSeconds: 10
